<resources>
    <string name="app_name">TuMedicina</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login">Login</string>
    <string name="action_registro">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //textos vistas registro
    <string name="txv_documento">Documento</string>
    <string name="txv_tipoDocumento">Tipo Documento</string>
    <string name="txv_primerNombre">Primer Nombre</string>
    <string name="txv_segundoNombre">Segundo Nombre</string>
    <string name="txv_primerApellido">Primer Apellido</string>
    <string name="txv_segundoApellido">Segundo Apellido</string>
    <string name="txv_usuario">Usuario</string>
    <string name="txv_contrasena">Contrasena</string>
    <string name="txv_correo">Correo</string>
</resources>